--- a/src/App.css
+++ b/src/App.css
@@ -168,6 +168,16 @@
   fill: black;
 }
 
+.grooming-calendar .days li svg.done * {
+  stroke: green;
+  fill: green;
+}
+
+.grooming-calendar .days li svg.missed * {
+  stroke: darkred;
+  fill: darkred;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
