--- a/src/App.css
+++ b/src/App.css
@@ -181,6 +181,27 @@
   fill: darkred;
 }
 
+.practice-menu p {
+  font-size: 1.5em;
+}
+
+.practice-menu .task {
+  justify-content: center;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.practice-menu svg {
+  width: 2em;
+  margin: 1rem;
+}
+
+.practice-menu svg.done {
+  stroke: green;
+  fill: green;
+}
+
 .practice .top-items {
   display: flex;
   max-height: 33vh;
@@ -189,6 +210,16 @@
 
 .practice .top-items > * {
   width: 20vw;
+}
+
+.practice .task-complete {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.practice .task-complete * {
+  margin: 2vw;
 }
 
 .dog-image {
